; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_wildcard.c_Curl_wildcard_dtor.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_wildcard.c_Curl_wildcard_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.WildcardData = type { i32, i32*, i32*, i32*, i32, i32*, i32 (i32*)* }

@CURLWC_INIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Curl_wildcard_dtor(%struct.WildcardData* %0) #0 {
  %2 = alloca %struct.WildcardData*, align 8
  store %struct.WildcardData* %0, %struct.WildcardData** %2, align 8
  %3 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %4 = icmp ne %struct.WildcardData* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %50

6:                                                ; preds = %1
  %7 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %8 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %7, i32 0, i32 6
  %9 = load i32 (i32*)*, i32 (i32*)** %8, align 8
  %10 = icmp ne i32 (i32*)* %9, null
  br i1 %10, label %11, label %23

11:                                               ; preds = %6
  %12 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %13 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %12, i32 0, i32 6
  %14 = load i32 (i32*)*, i32 (i32*)** %13, align 8
  %15 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %16 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %15, i32 0, i32 5
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 %14(i32* %17)
  %19 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %20 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %19, i32 0, i32 6
  store i32 (i32*)* @ZERO_NULL, i32 (i32*)** %20, align 8
  %21 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %22 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %21, i32 0, i32 5
  store i32* null, i32** %22, align 8
  br label %23

23:                                               ; preds = %11, %6
  %24 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %25 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %24, i32 0, i32 5
  %26 = load i32*, i32** %25, align 8
  %27 = icmp eq i32* %26, null
  %28 = zext i1 %27 to i32
  %29 = call i32 @DEBUGASSERT(i32 %28)
  %30 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %31 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %30, i32 0, i32 4
  %32 = call i32 @Curl_llist_destroy(i32* %31, i32* null)
  %33 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %34 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %33, i32 0, i32 3
  %35 = load i32*, i32** %34, align 8
  %36 = call i32 @free(i32* %35)
  %37 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %38 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %37, i32 0, i32 3
  store i32* null, i32** %38, align 8
  %39 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %40 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %39, i32 0, i32 2
  %41 = load i32*, i32** %40, align 8
  %42 = call i32 @free(i32* %41)
  %43 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %44 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %43, i32 0, i32 2
  store i32* null, i32** %44, align 8
  %45 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %46 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %45, i32 0, i32 1
  store i32* null, i32** %46, align 8
  %47 = load i32, i32* @CURLWC_INIT, align 4
  %48 = load %struct.WildcardData*, %struct.WildcardData** %2, align 8
  %49 = getelementptr inbounds %struct.WildcardData, %struct.WildcardData* %48, i32 0, i32 0
  store i32 %47, i32* %49, align 8
  br label %50

50:                                               ; preds = %23, %5
  ret void
}

declare dso_local i32 @ZERO_NULL(i32*) #1

declare dso_local i32 @DEBUGASSERT(i32) #1

declare dso_local i32 @Curl_llist_destroy(i32*, i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
